<resources>
    <!--    Standart -->
    <string name="app_name">Naneos - Analyze</string>
    <string name="cancel">Abbrechen</string>
    <string name="status">Status</string>
    <string name="scanning">Scanning: -</string>
    <string name="syncing">Syncing: -</string>
    <string name="timeSinceLastSync">Last sync: -</string>
    <string name="timeSinceLastReceived">Last received: -</string>
    <string name="sync_freq">Sync-Frequency: </string>

    <!-- Main-Interactions -->
    <string name="switch__keepSync">Keep synced</string>
    <string name="btn_sync">Sync all</string>
    <string name="save">Save data locally</string>
    <string name="scan">Scan</string>
    <string name="amountOfDataObjects">Devices: %1$d</string>

    <!-- MENU -->
    <string name="icon_import">Import</string>
    <string name="icon_gallery">Gallery</string>
    <string name="icon_slideshow">Slideshow</string>
    <string name="icon_settings">Settings</string>
    <string name="icon_logout">Logout</string>
    <string name="icon_Settings">Settings</string>

    <!-- PermissionManager -->
    <string name="gps_network_not_enabled">Es scheint, als sei GPS nicht aktiviert. Bitte aktivieren Sie den Dienst, um fortzufahren.</string>
    <string name="open_location_settings">Einstellungen</string>
    <string name="network_not_enabled">Es scheint, als hätten Sie keine Datenverbindung. Um sich neu anzumelden oder Daten zu synchronisieren benötigen Sie eine aktive Verbindung!</string>
    <string name="open_settings">Einstellungen</string>
    <string name="title_activity_login">Sign in</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to notifications -->
    <string name="channel_ID">naneos</string>
    <string name="channel_description">naneos</string>

</resources>
