<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:titleTextColor="@color/common_google_signin_btn_text_dark_default"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/status_container_horizontal"
            android:padding="10dp"
            android:background="@color/common_google_signin_btn_text_dark_disabled">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:id="@+id/tv_main_status"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/textView_amountOfDataObjects"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/amountOfDataObjects" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/syncing"
                    android:id="@+id/tv_main_status-syncing"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sync_freq"
                    android:id="@+id/tv_main_status-sync_freq"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/timeSinceLastReceived"
                    android:id="@+id/tv_main_status-timeSyncLastReceived"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/timeSinceLastSync"
                    android:id="@+id/tv_main_status-timeSinceLastSync"/>
            </LinearLayout>
        </LinearLayout>


        <ListView
            android:id="@+id/lv_main"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9" >
        </ListView>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_view"
        app:headerLayout="@layout/nav_header" >


    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>